new settings demo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!-- app.component.html (Application Root Template) -->
 <div class="app-container">
   <h1>Transaction Settings POC</h1>
-  <app-transaction-list></app-transaction-list>
+  <app-add-setting></app-add-setting>
+  <!--<app-transaction-list></app-transaction-list>-->
 </div>
